@@ -1,7 +1,6 @@
-{% extends "wagtailadmin/base.html" %}
+{% extends "wagtailadmin/generic/base.html" %}
 {% load wagtailimages_tags %}
 {% load i18n %}
-{% block titletag %}{% trans "Editing" %} {{ user.get_username }}{% endblock %}
 {% block content %}
 
     {% trans "Editing" as editing_str %}
